Only run release job on release branch
Signed-off-by: Timothée Dzik <timdzik@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1321,6 +1321,7 @@ workflows:
   release:
     jobs:
       - release-hold:
+          <<: *only_release
           type: approval
       - lte-agw-deploy:
           <<: *only_release
