--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
-.circleci/ @tmdzk
-circleci/ @tmdzk @mattymo @119Vik
+.circleci/ @rdefosse @119Vik @tmdzk
+circleci/ @rdefosse @tmdzk @mattymo @119Vik
 
 ci-scripts/ @rdefosse @tmdzk @mattymo @119Vik
 
@@ -7,15 +7,15 @@ ci-scripts/ @rdefosse @tmdzk @mattymo @119Vik
 .golangci.yml @magma/orc8r-approvers
 
 orc8r/ @magma/orc8r-approvers
-orc8r/tools/packer/ @tmdzk @mattymo @119Vik
-orc8r/cloud/deploy/bare-metal/ @tmdzk @mattymo @119Vik
-orc8r/cloud/deploy/bare-metal-ansible/ @mattymo @119Vik
+orc8r/tools/packer/ @rdefosse @tmdzk @mattymo @119Vik
+orc8r/cloud/deploy/bare-metal/ @rdefosse @tmdzk @mattymo @119Vik
+orc8r/cloud/deploy/bare-metal-ansible/ @rdefosse @mattymo @119Vik
 
 orc8r/gateway/c/ @themarwhal @ardzoht
 
 feg/ @magma/feg-approvers
 cwf/ @themarwhal @mpgermano @uri200 @emakeev
-cwf/gateway/Vagrantfile @mattymo @119Vik @tmdzk
+cwf/gateway/Vagrantfile @rdefosse @mattymo @119Vik @tmdzk
 
 
 openwrt/ @emakeev @uri200
@@ -26,11 +26,11 @@ lte/gateway/c/session_manager @themarwhal @uri200
 lte/gateway/c/oai @ssanadhya @ulaskozat @lionelgo @ardzoht
 lte/gateway/c/sctpd @ssanadhya @ulaskozat
 lte/gateway/c/connection_tracker @koolzz
-lte/gateway/docker @rdefosse @tmdzk
-lte/gateway/release @tmdzk
+lte/gateway/docker @rdefosse @119Vik @tmdzk
+lte/gateway/release @rdefosse @119Vik @tmdzk
 lte/gateway/python/magma/pipelined @koolzz @pshelar
 lte/gateway/python/integ_tests @ssanadhya @ulaskozat @ardzoht
-lte/gateway/Vagrantfile @mattymo @119Vik @tmdzk
+lte/gateway/Vagrantfile @rdefosse @mattymo @119Vik @tmdzk
 
 **/*.pb.go @magma/repo-magma-maintain
 **/*_swaggergen.go @magma/repo-magma-maintain
