--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -39,7 +39,7 @@ lte/gateway/Vagrantfile @mattymo @119Vik @tmdzk
 xwf/ @AyliD @aharonnovo @r-i-g
 feg/radius @AyliD @aharonnovo @r-i-g @themarwhal @mpgermano @uri200 @emakeev
 
-nms/ @karthiksubraveti @andreilee @HannaFar
+nms/ @magma/approvers-nms
 
 docs/readmes/proposals @electronjoe
 
