--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -982,7 +982,7 @@ jobs:
             sed -i -e "s/AWS_ACCESS_KEY_ID/${AWS_FB_CRED}/g" ~/magma-experimental/files/secrets.yaml
             sed -i -e "s@AWS_SECRET_ACCESS_KEY@${AWS_FB_SECRET}@g" ~/magma-experimental/files/secrets.yaml
             sed -i -e "s/agwmpBoot1/agwmpboot2/g" ~/magma-experimental/roles/vars/defaults.yaml
-            echo $(printenv agwmpboot2)">> ~/magma-experimental/files/agwmpboot2.pem
+            echo "$(printenv agwmpboot2)">> ~/magma-experimental/files/agwmpboot2.pem
             sed -i -e "s/agwmpHost1/agwmphost2/g" ~/magma-experimental/roles/vars/defaults.yaml
             echo "$(printenv agwmphost2)">> ~/magma-experimental/files/agwmphost2.pem
             #ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=~/magma-experimental/files" --tags keyCreate
