--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,17 +3,17 @@ circleci/ @rdefosse @tmdzk @mattymo @119Vik
 
 ci-scripts/ @rdefosse @tmdzk @mattymo @119Vik
 
-*/cloud/ @magma/orc8r-approvers
-.golangci.yml @magma/orc8r-approvers
+*/cloud/ @magma/approvers-orc8r
+.golangci.yml @magma/approvers-orc8r
 
-orc8r/ @magma/orc8r-approvers
+orc8r/ @magma/approvers-orc8r
 orc8r/tools/packer/ @rdefosse @tmdzk @mattymo @119Vik
 orc8r/cloud/deploy/bare-metal/ @rdefosse @tmdzk @mattymo @119Vik
 orc8r/cloud/deploy/bare-metal-ansible/ @rdefosse @mattymo @119Vik
 
 orc8r/gateway/c/ @themarwhal @ardzoht
 
-feg/ @magma/feg-approvers
+feg/ @magma/approvers-feg
 
 cwf/ @magma/approvers-cwf
 cwf/gateway/Vagrantfile @rdefosse @mattymo @119Vik @tmdzk
